# legend-daq2lh5

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: Makefile
docs/source/: .py_api_exclude  conf.py  developer.rst  index.rst
docs/source/manuals/: build_raw.rst  index.rst
src/daq2lh5/: __init__.py  build_raw.py  cli.py  data_decoder.py  data_streamer.py  raw_buffer.py
src/daq2lh5/buffer_processor/: buffer_processor.py  lh5_buffer_processor.py
src/daq2lh5/compass/: compass_config_parser.py  compass_event_decoder.py  compass_header_decoder.py  compass_streamer.py
src/daq2lh5/fc/: fc_config_decoder.py  fc_event_decoder.py  fc_status_decoder.py  fc_streamer.py
src/daq2lh5/orca/: orca_base.py  orca_digitizers.py  orca_flashcam.py  orca_header.py  orca_header_decoder.py  orca_packet.py  orca_run_decoder.py  orca_streamer.py
tests/: conftest.py  test_build_raw.py  test_cli.py  test_core.py  test_daq_to_raw.py  test_raw_buffer.py
tests/buffer_processor/: test_buffer_processor.py  test_lh5_buffer_processor.py
tests/buffer_processor/test_buffer_processor_configs/: buffer_processor_config.json  lh5_buffer_processor_config.json
tests/compass/: conftest.py  test_compass_event_decoder.py  test_compass_header_decoder.py  test_compass_streamer.py
tests/fc/: conftest.py  test_fc_config_decoder.py  test_fc_event_decoder.py  test_fc_status_decoder.py  test_fc_streamer.py
tests/orca/: conftest.py  test_or_run_decoder_for_run.py  test_orca_fc.py  test_orca_packet.py
