[metadata]
name = legend_daq2lh5
version = attr: daq2lh5._version.version
description = Convert digitizer data to LH5
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/legend-daq2lh5
author = Jason Detwiler
author_email = jasondet@uw.edu
maintainer = The LEGEND Collaboration
license = GPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
install_requires =
    dspeed>=1.1
    h5py>=3.2.0
    hdf5plugin
    legend-pydataobj>=1.4
    numpy>=1.21
    pyfcutils
    tqdm>=4.27
    xmltodict
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    legend-daq2lh5 = daq2lh5.cli:daq2lh5_cli

[options.extras_require]
all =
    legend-daq2lh5[docs,test]
docs =
    furo
    myst-parser
    sphinx
    sphinx-copybutton
    sphinx-inline-tabs
test =
    pre-commit
    pylegendtestdata
    pytest>=6.0
    pytest-cov

[flake8]
extend-ignore = E203, E501, D10

[codespell]
ignore-words-list = crate, puls
